##Text encoding: utf-8

2006-12-28  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/gtkchem3dviewer.cc:  cleaned code.
	* gcu/gtkchem3dviewer.h: ditto and updated API docs.
	* gcu/gtkcomboperiodic.h: updated API docs.
	* gcu/gtkcrystalviewer.cc: cleaned code.
	* gcu/gtkcrystalviewer.h: ditto and updated API docs.
	* gcu/gtkperiodic.h: updated API docs.
	* gcu/object.h: ditto.
	* tests/testgtkchem3dviewer.c: cleaned code and updated API docs.
	* tests/testgtkcrystalviewer.c: ditto.
	* tests/testgtkperiodic.c: ditto.

2006-12-27  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/gtkperiodic.c: cleaned code.
	* gcu/gtkperiodic.h: ditto and updated API docs.
	* tests/testgtkperiodic.c: ditto.

2006-12-26  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/crystalatom.h: updated API docs.
	* gcu/crystalcleavage.h: ditto.
	* gcu/crystalline.h: ditto.
	* gcu/macros.h: ditto.
	* gcu/object.h: ditto.

2006-12-25  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/dialog.h: updated API docs and made some members private.
	* gcu/filechooser.h: updated API docs.

2006-12-24  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/application.h: fixed typos in docs
	* gcu/chem3ddoc.cc: update m_Empty after loading.
	* gcu/crystaldoc.cc: use m_Emty instead of deprecated SetEmpty().
	* gcu/document.h: updated API docs.
	* gcu/filechooser.h: ditto.
	* gcu/formula.h: minot update.
	* gcu/gldocument.h: updated API docs.

2006-12-23  Jean Bréfort  <jean.brefort@normalesup.org>
	* docs/reference/Doxyfile.in: updated options.
	* gcu/application.h: updated API docs.
	* gcu/chem3ddoc.h: ditto.
	* gcu/chemistry.h: ditto.
	* gcu/glview.h: ditto.
	* gcu/gtkchem3dviewer.h: ditto.
	* gcu/value.cc: enhanced implementation of LocalizedString class.
	* gcu/value.h: updated API docs.

2006-12-22  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/application.cc: use help uris instead of filenames.
	* gcu/macros.h: fixed GCU_GCONF_GET macro.
	* gcu/matrix.h: fixed typo in documentation.