@@ -1,5 +1,12 @@
 ##Text encoding: utf-8
 
+2006-12-31  Jean Bréfort  <jean.brefort@normalesup.org>
+	* docs/help/3d/C/figures/main-window.png: new screenshot.
+	* docs/help/3d/C/gchem3d-viewer-unstable.xml: pass make check.
+	* docs/help/calc/C/gchemcalc-unstable.xml: ditto.
+	* docs/help/table/C/gchemtable-unstable.xml: ditto.
+	* programs/3d/window.cc: slightly graw window default size.
+
 2006-12-28  Jean Bréfort  <jean.brefort@normalesup.org>
 	* gcu/gtkchem3dviewer.cc:  cleaned code.
 	* gcu/gtkchem3dviewer.h: ditto and updated API docs.
